# aoe_check

./: CMakeLists.txt  README.md  aoe_common.h  aoe_shape.cpp  aoe_shape.h  comm_def.h  fn_log.h  index.md  main.cpp  make.sh  vector3.h  zarray.h
glfw/: gl.h  glad_gl.c
